--- a/APP03-Entrega/HectometrosMt.xaml
+++ b/APP03-Entrega/HectometrosMt.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="APP03_Entrega.HectometrosMt"
              Title="HectometrosMt">
-    <VerticalStackLayout>
+    <VerticalStackLayout
+        Padding="25"
+        Spacing="25">
         <Label 
             Text="Conversor de Hec em Metros"
             VerticalOptions="Center" 
